bases/grav/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grav
  name: grav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grav
  template:
    metadata:
      labels:
        app: grav
    spec:
      containers:
      - name: grav
        image: ghcr.io/clubcedille/grav:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: grav-accounts
          mountPath: /var/www/html/user/accounts
        - name: grav-data
          mountPath: /var/www/html/user/data
      # group 33 is www-data
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 400m
            memory: 512Mi
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      volumes:
      - name: grav-accounts
        persistentVolumeClaim:
          claimName: grav-accounts-pvc
      - name: grav-data
        persistentVolumeClaim:
          claimName: grav-data-pvc
