bases/grav/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: grav
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: grav
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grav-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - secretName: grav-tls
    hosts:
    - grav.prod.cedille.club
  rules:
  - host: grav.prod.cedille.club
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grav
            port:
              number: 80
