bases/grav/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grav-ingress
spec:
  podSelector:
    matchLabels:
      app: grav
  policyTypes:
    - Ingress
  ingress:
    - from: []
